--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "1.19.0",
     "consign": "0.1.6",
     "cors": "2.8.5",
+    "dotenv": "^8.2.0",
     "express": "4.17.1",
     "express-swagger-generator": "1.1.17",
     "express-winston": "4.0.2",
