--- a/libquality-api.yaml
+++ b/libquality-api.yaml
@@ -15,7 +15,7 @@ metadata:
 spec:
   type: openapi
   lifecycle: experimental
-  owner: backstage
+  owner: background
   definition: |
     openapi: "3.0.0"
     info:
